--- a/api/php/Dockerfile
+++ b/api/php/Dockerfile
@@ -1,9 +1,9 @@
-FROM php:8.1.11-alpine
+FROM php:8.2.7-alpine
 
-COPY --from=mlocati/php-extension-installer:1.5.44 /usr/bin/install-php-extensions /usr/local/bin/install-php-extensions
+COPY --from=mlocati/php-extension-installer:2.1.34 /usr/bin/install-php-extensions /usr/local/bin/install-php-extensions
 
 RUN set -xe \
- && apk add unzip \
+ && apk add --no-cache unzip \
  && install-php-extensions opcache sockets pcntl pdo_pgsql zip decimal \
  && rm /usr/local/bin/install-php-extensions \
  && mkdir /app
