--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,19 +10,19 @@ permissions:
   packages: write
 
 jobs:
-  api-php:
+  fv:
     runs-on: ubuntu-latest
     name: build base image for php
     steps:
-    - uses: actions/checkout@v3
-    - uses: docker/login-action@v2
-      name: login to ghcr.io
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - uses: docker/build-push-action@v3
-      with:
-        context: ./api/php
-        push: true
-        tags: ghcr.io/${{ github.repository_owner }}/api:php
+      - uses: actions/checkout@v3
+      - uses: docker/login-action@v2
+        name: login to ghcr.io
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/build-push-action@v3
+        with:
+          context: ./php/fv
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/php:fv
