--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   php-api:
+    timeout-minutes: 15
     runs-on: ubuntu-latest
     name: build base image for php
     steps:
@@ -26,3 +27,21 @@ jobs:
           context: ./php/api
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/php:api
+
+  http-api:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    name: build image for http server
+    steps:
+      - uses: actions/checkout@v3
+      - uses: docker/login-action@v2
+        name: login to ghcr.io
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/build-push-action@v3
+        with:
+          context: ./http
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/http:api
