refactor: php for API

--- a/php/api/Dockerfile
+++ b/php/api/Dockerfile
@@ -1,6 +1,6 @@
-FROM php:8.2.10-fpm-alpine
+FROM php:8.3-alpine
 
-COPY --from=mlocati/php-extension-installer:2.1.51 /usr/bin/install-php-extensions /usr/local/bin/install-php-extensions
+COPY --from=mlocati/php-extension-installer:2.1.68 /usr/bin/install-php-extensions /usr/local/bin/install-php-extensions
 
 RUN set -xe \
  && apk add --no-cache unzip \
@@ -8,7 +8,6 @@ RUN set -xe \
  && rm /usr/local/bin/install-php-extensions \
  && mkdir /app
 
-COPY config/fpm.ini /usr/local/etc/php-fpm.conf
 COPY config/php.ini /usr/local/etc/php/php.ini
 
 WORKDIR /app
