--- a/php/api/Dockerfile
+++ b/php/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM dunglas/frankenphp:1.0-php8.3-alpine
 
-RUN set -xe && php-extension-installer opcache sockets pcntl pdo_pgsql decimal gd zip
+RUN set -xe && install-php-extensions opcache sockets pcntl pdo_pgsql decimal gd zip
 
 COPY config/php.ini /usr/local/etc/php/php.ini
 COPY config/Caddyfile /etc/caddy/Caddyfile
