--- a/php/api/Dockerfile
+++ b/php/api/Dockerfile
@@ -5,5 +5,7 @@ RUN set -xe && install-php-extensions opcache sockets pcntl pdo_pgsql decimal gd
 COPY config/php.ini /usr/local/etc/php/php.ini
 COPY config/Caddyfile /etc/caddy/Caddyfile
 
+HEALTHCHECK NONE
+
 ENTRYPOINT ["/usr/local/bin/frankenphp"]
-CMD ["php-server"]
+CMD ["run", "--config", "/etc/caddy/Caddyfile", "--adapter", "caddyfile"]
