refactor: health-check

--- a/php/api/config/Caddyfile
+++ b/php/api/config/Caddyfile
@@ -1,6 +1,8 @@
 {
     admin off
     auto_https off
+    ocsp_stapling off
+    persist_config off
 
 	frankenphp {
 		{$FRANKENPHP_CONFIG}
@@ -10,6 +12,16 @@
 	#order vulcain after reverse_proxy
 	order php_server before file_server
 	order php before file_server
+}
+
+:8080 {
+    handle /health-check {
+        @goingDown vars {http.shutting_down} true
+        respond @goingDown "going down in {http.time_until_shutdown}" 503
+        respond 200
+    }
+
+    respond 418
 }
 
 :8443 {
