refactor: healthcheck intervals

--- a/php/api/Dockerfile
+++ b/php/api/Dockerfile
@@ -5,7 +5,7 @@ RUN set -xe && install-php-extensions opcache sockets pcntl pdo_pgsql decimal gd
 COPY config/php.ini /usr/local/etc/php/php.ini
 COPY config/Caddyfile /etc/caddy/Caddyfile
 
-HEALTHCHECK CMD curl -f http://127.0.0.1/health-check || exit 1
+HEALTHCHECK CMD --interval=5s --timeout=5s --start-period=10s --retries=3 curl -f http://127.0.0.1/health-check || exit 1
 
 ENTRYPOINT ["/usr/local/bin/frankenphp"]
 CMD ["run", "--config", "/etc/caddy/Caddyfile", "--adapter", "caddyfile"]
