--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,20 +10,20 @@ permissions:
   packages: write
 
 jobs:
-  php-api:
-    timeout-minutes: 15
+  erp:
+    timeout-minutes: 10
     runs-on: ubuntu-latest
-    name: build base image for API
+    name: build base image for ERP
     steps:
-      - uses: actions/checkout@v4
-      - uses: docker/login-action@v3
-        name: login to ghcr.io
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - uses: docker/build-push-action@v5
-        with:
-          context: ./php/api
-          push: true
-          tags: ghcr.io/${{ github.repository_owner }}/php:api
+    - uses: actions/checkout@v4
+    - uses: docker/login-action@v3
+      name: login to ghcr.io
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - uses: docker/build-push-action@v5
+      with:
+        context: ./php/erp
+        push: true
+        tags: ghcr.io/${{ github.repository_owner }}/php:erp
