--- a/php/erp/Dockerfile
+++ b/php/erp/Dockerfile
@@ -1,6 +1,6 @@
-FROM dunglas/frankenphp:1.0.3-php8.3.1-alpine
+FROM dunglas/frankenphp:1.1.0-php8.3.2-alpine
 
-RUN set -xe && install-php-extensions opcache sockets pcntl pdo_pgsql gd decimal bcmath intl zip
+RUN set -xe && install-php-extensions opcache sockets pcntl pdo_pgsql decimal intl zip
 
 COPY config/php.ini /usr/local/etc/php/php.ini
 COPY config/Caddyfile /etc/caddy/Caddyfile
