refactor: remove tls

--- a/php/erp/Dockerfile
+++ b/php/erp/Dockerfile
@@ -12,3 +12,5 @@ HEALTHCHECK NONE
 
 ENTRYPOINT ["/usr/local/bin/frankenphp"]
 CMD ["run", "--config", "/etc/caddy/Caddyfile", "--adapter", "caddyfile"]
+
+EXPOSE 8080
