refactor: add TLS

--- a/php/erp/config/Caddyfile
+++ b/php/erp/config/Caddyfile
@@ -4,7 +4,12 @@
 	ocsp_stapling off
 	persist_config off
 
-	servers :8080 {
+	servers :443 {
+		name https
+		protocols h1 h2 h3
+	}
+
+	servers :80 {
 		name http
 		protocols h1
 	}
@@ -19,12 +24,26 @@
 	order php before file_server
 }
 
-:8080 {
+:80 {
+	skip_log *
+
+	handle /health-check {
+		@goingDown vars {http.shutting_down} true
+		respond @goingDown "going down in {http.time_until_shutdown}" 503
+		respond 200
+	}
+
+	redir https://{host}{uri} permanent
+}
+
+:443 {
 	root * /app/public
 
 	skip_log *
 
 	encode zstd br gzip
+
+	tls /etc/caddy/cert/tls.crt /etc/caddy/cert/tls.key
 
 	php_server {
 		resolve_root_symlink
