--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,4 +26,4 @@ jobs:
       with:
         context: ./php/erp
         push: true
-        tags: ghcr.io/${{ github.repository_owner }}/php:erp
+        tags: ghcr.io/${{ github.repository_owner }}/erp:server
