--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,6 @@ jobs:
         password: ${{ secrets.GITHUB_TOKEN }}
     - uses: docker/build-push-action@v5
       with:
-        context: ./php/erp
+        context: ./erp/server
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/erp:server
