--- a/erp/server/Dockerfile
+++ b/erp/server/Dockerfile
@@ -1,7 +1,7 @@
 FROM dunglas/frankenphp:1.4.4-php8.4.4
 
 RUN set -xe \
- && install-php-extensions install-php-extensions opcache pdo_pgsql gd decimal bcmath intl zip \
+ && install-php-extensions opcache pdo_pgsql gd decimal bcmath intl zip \
  && setcap -r /usr/local/bin/frankenphp
 
 COPY config/php.ini /usr/local/etc/php/php.ini
