--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,21 @@ jobs:
         context: ./erp/server
         push: true
         tags: ghcr.io/${{ github.repository_owner }}/erp:server
+
+  dzf-bridge:
+    timeout-minutes: 5
+    runs-on: ubuntu-latest
+    name: build base image for DzF
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/login-action@v3
+        name: login to ghcr.io
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - uses: docker/build-push-action@v5
+        with:
+          context: ./dzf/bridge
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/dzf:bridge
