refactor: remove TLS

--- a/erp/server/config/Caddyfile
+++ b/erp/server/config/Caddyfile
@@ -4,22 +4,21 @@
 	ocsp_stapling off
 	persist_config off
 
-	servers :8443 {
-		name https
-		protocols h1 h2
-	}
-
 	frankenphp
 }
 
-:8443 {
+:8080 {
+	handle /health-check {
+		@goingDown vars {http.shutting_down} true
+		respond @goingDown "going down in {http.time_until_shutdown}" 503
+		respond 200
+	}
+
 	root * /app/public
 
 	log_skip *
 
 	encode zstd br gzip
-
-	tls /config/cert/tls.crt /config/cert/tls.key
 
 	php_server {
 		resolve_root_symlink false
